Fix the CSS whitespace on the client registration

--- a/client/src/app/core/auth/registration/registration.component.css
+++ b/client/src/app/core/auth/registration/registration.component.css
@@ -14,7 +14,7 @@
 }
 
 .content-inner {
-  padding-top: 15px;
+  padding: 15px;
 }
 
 #logo {
